Revert to 1.18