@@ -26,20 +26,19 @@
 package org.geysermc.geyser.entity.type.living.animal.horse;
 
 import com.github.steveice10.mc.protocol.data.game.entity.metadata.type.ByteEntityMetadata;
-import com.github.steveice10.mc.protocol.data.game.entity.player.Hand;
-import org.cloudburstmc.math.vector.Vector3f;
-import org.cloudburstmc.protocol.bedrock.data.entity.EntityDataTypes;
-import org.cloudburstmc.protocol.bedrock.data.entity.EntityEventType;
-import org.cloudburstmc.protocol.bedrock.data.entity.EntityFlag;
-import org.cloudburstmc.protocol.bedrock.data.inventory.ContainerType;
-import org.cloudburstmc.protocol.bedrock.packet.EntityEventPacket;
-import org.cloudburstmc.protocol.bedrock.packet.UpdateAttributesPacket;
+import com.google.common.collect.ImmutableSet;
+import com.nukkitx.math.vector.Vector3f;
+import com.nukkitx.protocol.bedrock.data.entity.EntityData;
+import com.nukkitx.protocol.bedrock.data.entity.EntityEventType;
+import com.nukkitx.protocol.bedrock.data.entity.EntityFlag;
+import com.nukkitx.protocol.bedrock.data.inventory.ContainerType;
+import com.nukkitx.protocol.bedrock.packet.EntityEventPacket;
+import com.nukkitx.protocol.bedrock.packet.UpdateAttributesPacket;
 import org.geysermc.geyser.entity.EntityDefinition;
 import org.geysermc.geyser.entity.attribute.GeyserAttributeType;
 import org.geysermc.geyser.entity.type.living.animal.AnimalEntity;
 import org.geysermc.geyser.inventory.GeyserItemStack;
-import org.geysermc.geyser.item.Items;
-import org.geysermc.geyser.item.type.Item;
+import org.geysermc.geyser.registry.type.ItemMapping;
 import org.geysermc.geyser.session.GeyserSession;
 import org.geysermc.geyser.util.InteractionResult;
 import org.geysermc.geyser.util.InteractiveTag;
@@ -53,14 +52,14 @@ public class AbstractHorseEntity extends AnimalEntity {
      * A list of all foods a horse/donkey can eat on Java Edition.
      * Used to display interactive tag if needed.
      */
-    private static final Set<Item> DONKEY_AND_HORSE_FOODS = Set.of(Items.GOLDEN_APPLE, Items.ENCHANTED_GOLDEN_APPLE,
-            Items.GOLDEN_CARROT, Items.SUGAR, Items.APPLE, Items.WHEAT, Items.HAY_BLOCK);
+    private static final Set<String> DONKEY_AND_HORSE_FOODS = ImmutableSet.of("golden_apple", "enchanted_golden_apple",
+            "golden_carrot", "sugar", "apple", "wheat", "hay_block");
 
     public AbstractHorseEntity(GeyserSession session, int entityId, long geyserId, UUID uuid, EntityDefinition<?> definition, Vector3f position, Vector3f motion, float yaw, float pitch, float headYaw) {
         super(session, entityId, geyserId, uuid, definition, position, motion, yaw, pitch, headYaw);
 
         // Specifies the size of the entity's inventory. Required to place slots in the entity.
-        dirtyMetadata.put(EntityDataTypes.CONTAINER_SIZE, getContainerBaseSize());
+        dirtyMetadata.put(EntityData.CONTAINER_BASE_SIZE, getContainerBaseSize());
 
         setFlag(EntityFlag.WASD_CONTROLLED, true);
     }
@@ -102,8 +101,8 @@ public class AbstractHorseEntity extends AnimalEntity {
         // Only set eating when we don't have mouth open so a player interaction doesn't trigger the eating animation
         horseFlags = (xd & 0x10) == 0x10 && (xd & 0x40) != 0x40 ? horseFlags | 0x20 : horseFlags;
 
-        // Set the flags into the horse flags
-        dirtyMetadata.put(EntityDataTypes.HORSE_FLAGS, horseFlags);
+        // Set the flags into the display item
+        dirtyMetadata.put(EntityData.DISPLAY_ITEM, horseFlags);
 
         // Send the eating particles
         // We use the wheat metadata as static particles since Java
@@ -112,30 +111,30 @@ public class AbstractHorseEntity extends AnimalEntity {
             EntityEventPacket entityEventPacket = new EntityEventPacket();
             entityEventPacket.setRuntimeEntityId(geyserId);
             entityEventPacket.setType(EntityEventType.EATING_ITEM);
-            entityEventPacket.setData(session.getItemMappings().getStoredItems().wheat().getBedrockDefinition().getRuntimeId() << 16);
+            entityEventPacket.setData(session.getItemMappings().getStoredItems().wheat().getBedrockId() << 16);
             session.sendUpstreamPacket(entityEventPacket);
         }
 
         // Set container type if tamed
-        dirtyMetadata.put(EntityDataTypes.CONTAINER_TYPE, tamed ? (byte) ContainerType.HORSE.getId() : (byte) 0);
+        dirtyMetadata.put(EntityData.CONTAINER_TYPE, tamed ? (byte) ContainerType.HORSE.getId() : (byte) 0);
 
         // Shows the jump meter
         setFlag(EntityFlag.CAN_POWER_JUMP, saddled);
     }
 
     @Override
-    public boolean canEat(Item item) {
-        return DONKEY_AND_HORSE_FOODS.contains(item);
+    public boolean canEat(String javaIdentifierStripped, ItemMapping mapping) {
+        return DONKEY_AND_HORSE_FOODS.contains(javaIdentifierStripped);
     }
 
     @Nonnull
     @Override
-    protected InteractiveTag testMobInteraction(@Nonnull Hand hand, @Nonnull GeyserItemStack itemInHand) {
-        return testHorseInteraction(hand, itemInHand);
+    protected InteractiveTag testMobInteraction(@Nonnull GeyserItemStack itemInHand) {
+        return testHorseInteraction(itemInHand);
     }
 
     @Nonnull
-    protected final InteractiveTag testHorseInteraction(@Nonnull Hand hand, @Nonnull GeyserItemStack itemInHand) {
+    protected final InteractiveTag testHorseInteraction(@Nonnull GeyserItemStack itemInHand) {
         boolean isBaby = isBaby();
         if (!isBaby) {
             if (getFlag(EntityFlag.TAMED) && session.isSneaking()) {
@@ -143,7 +142,7 @@ public class AbstractHorseEntity extends AnimalEntity {
             }
 
             if (!passengers.isEmpty()) {
-                return super.testMobInteraction(hand, itemInHand);
+                return super.testMobInteraction(itemInHand);
             }
         }
 
@@ -165,14 +164,14 @@ public class AbstractHorseEntity extends AnimalEntity {
                 return InteractiveTag.ATTACH_CHEST;
             }
 
-            if (additionalTestForInventoryOpen(itemInHand) || !isBaby && !getFlag(EntityFlag.SADDLED) && itemInHand.asItem() == Items.SADDLE) {
+            if (additionalTestForInventoryOpen(itemInHand) || !isBaby && !getFlag(EntityFlag.SADDLED) && itemInHand.getJavaId() == session.getItemMappings().getStoredItems().saddle()) {
                 // Will open the inventory to be saddled
                 return InteractiveTag.OPEN_CONTAINER;
             }
         }
 
         if (isBaby) {
-            return super.testMobInteraction(hand, itemInHand);
+            return super.testMobInteraction(itemInHand);
         } else {
             return InteractiveTag.MOUNT;
         }
@@ -180,12 +179,12 @@ public class AbstractHorseEntity extends AnimalEntity {
 
     @Nonnull
     @Override
-    protected InteractionResult mobInteract(Hand hand, @Nonnull GeyserItemStack itemInHand) {
-        return mobHorseInteract(hand, itemInHand);
+    protected InteractionResult mobInteract(@Nonnull GeyserItemStack itemInHand) {
+        return mobHorseInteract(itemInHand);
     }
 
     @Nonnull
-    protected final InteractionResult mobHorseInteract(@Nonnull Hand hand, @Nonnull GeyserItemStack itemInHand) {
+    protected final InteractionResult mobHorseInteract(@Nonnull GeyserItemStack itemInHand) {
         boolean isBaby = isBaby();
         if (!isBaby) {
             if (getFlag(EntityFlag.TAMED) && session.isSneaking()) {
@@ -194,7 +193,7 @@ public class AbstractHorseEntity extends AnimalEntity {
             }
 
             if (!passengers.isEmpty()) {
-                return super.mobInteract(hand, itemInHand);
+                return super.mobInteract(itemInHand);
             }
         }
 
@@ -221,14 +220,14 @@ public class AbstractHorseEntity extends AnimalEntity {
             }
 
             // Note: yes, this code triggers for llamas too. lol (as of Java Edition 1.18.1)
-            if (additionalTestForInventoryOpen(itemInHand) || (!isBaby && !getFlag(EntityFlag.SADDLED) && itemInHand.asItem() == Items.SADDLE)) {
+            if (additionalTestForInventoryOpen(itemInHand) || (!isBaby && !getFlag(EntityFlag.SADDLED) && itemInHand.getJavaId() == session.getItemMappings().getStoredItems().saddle())) {
                 // Will open the inventory to be saddled
                 return InteractionResult.SUCCESS;
             }
         }
 
         if (isBaby) {
-            return super.mobInteract(hand, itemInHand);
+            return super.mobInteract(itemInHand);
         } else {
             // Attempt to mount
             // TODO client-set flags sitting standing?
@@ -245,22 +244,22 @@ public class AbstractHorseEntity extends AnimalEntity {
     }
 
     protected boolean additionalTestForInventoryOpen(@Nonnull GeyserItemStack itemInHand) {
-        return itemInHand.asItem().javaIdentifier().endsWith("_horse_armor");
+        return itemInHand.getMapping(session).getJavaIdentifier().endsWith("_horse_armor");
     }
 
     /* Just a place to stuff common code for the undead variants without having duplicate code */
 
-    protected final InteractiveTag testUndeadHorseInteraction(@Nonnull Hand hand, @Nonnull GeyserItemStack itemInHand) {
+    protected final InteractiveTag testUndeadHorseInteraction(@Nonnull GeyserItemStack itemInHand) {
         if (!getFlag(EntityFlag.TAMED)) {
             return InteractiveTag.NONE;
         } else if (isBaby()) {
-            return testHorseInteraction(hand, itemInHand);
+            return testHorseInteraction(itemInHand);
         } else if (session.isSneaking()) {
             return InteractiveTag.OPEN_CONTAINER;
         } else if (!passengers.isEmpty()) {
-            return testHorseInteraction(hand, itemInHand);
+            return testHorseInteraction(itemInHand);
         } else {
-            if (Items.SADDLE == itemInHand.asItem()) {
+            if (session.getItemMappings().getStoredItems().saddle() == itemInHand.getJavaId()) {
                 return InteractiveTag.OPEN_CONTAINER;
             }
 
@@ -272,16 +271,16 @@ public class AbstractHorseEntity extends AnimalEntity {
         }
     }
 
-    protected final InteractionResult undeadHorseInteract(@Nonnull Hand hand, @Nonnull GeyserItemStack itemInHand) {
+    protected final InteractionResult undeadHorseInteract(@Nonnull GeyserItemStack itemInHand) {
         if (!getFlag(EntityFlag.TAMED)) {
             return InteractionResult.PASS;
         } else if (isBaby()) {
-            return mobHorseInteract(hand, itemInHand);
+            return mobHorseInteract(itemInHand);
         } else if (session.isSneaking()) {
             // Opens inventory
             return InteractionResult.SUCCESS;
         } else if (!passengers.isEmpty()) {
-            return mobHorseInteract(hand, itemInHand);
+            return mobHorseInteract(itemInHand);
         } else {
             // The client tests for saddle but it doesn't matter for us at this point.
             return InteractionResult.SUCCESS;
